--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@studio-freight/lenis": "^1.0.42",
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.11.0",
+    "dotenv": "^17.2.1",
     "gsap": "^3.13.0",
     "lenis": "^1.3.8",
     "react": "^19.1.0",
